--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,6 +1,8 @@
 $color-body-bg: #004980;
-$color-field-difficult-bg: #C2F5FF; 
-$color-field-difficult-text: #004980;
-$color-button-start-bg: #7AC100;
-$color-button-start-text: #FFFFFF;
+$color-block-message-bg: #C2F5FF; 
+$color-block-message-title: #004980;
+$color-button-level-bg: #FFFFFF;
+$color-button-level-text: #0080C1;
+$color-green-button-bg: #7AC100;
+$color-green-button-text: #FFFFFF;
 
