--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,8 +1,10 @@
 $color-body-bg: #004980;
-$color-block-message-bg: #C2F5FF; 
+$color-block-message-bg: #C2F5FF;
 $color-block-message-title: #004980;
 $color-button-level-bg: #FFFFFF;
 $color-button-level-text: #0080C1;
+$color-button-level-hover: #0080C1;
+$color-button-level-alert: #ff0000;
+
 $color-green-button-bg: #7AC100;
 $color-green-button-text: #FFFFFF;
-
