--- a/style.css
+++ b/style.css
@@ -1,113 +1,102 @@
 @font-face {
-    font-family: "StratosSkyeng";
-    font-style: normal;
-    font-weight: 400;
-    src: local("StratosSkyeng"),
-        url("src/fonts/StratosSkyeng/stratosskyengweb-regular.woff2")
-            format("woff2"),
-        url("src/fonts/StratosSkyeng/stratosskyengweb-regular.woff")
-            format("woff"),
-        url("src/fonts/StratosSkyeng/stratosskyeng-regular.otf") format("otf");
+  font-family: "StratosSkyeng";
+  font-style: normal;
+  font-weight: 400;
+  src: local("StratosSkyeng"), url("src/fonts/StratosSkyeng/stratosskyengweb-regular.woff2") format("woff2"), url("src/fonts/StratosSkyeng/stratosskyengweb-regular.woff") format("woff"), url("src/fonts/StratosSkyeng/stratosskyeng-regular.otf") format("otf");
 }
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: "StratosSkyeng", sans-serif;
-
-    height: 100vh;
-    width: 100vw;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    background: #004980;
+  font-family: "StratosSkyeng", sans-serif;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #004980;
 }
 
 .screen-difficult_hidden,
 .screen-play_hidden {
-    display: none;
+  display: none;
 }
 
 .block-message {
-    width: 480px;
-    height: 459px;
-    background: #c2f5ff;
-    border-radius: 12px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 480px;
+  height: 459px;
+  background: #c2f5ff;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .difficult__title {
-    width: 208px;
-    height: 96px;
-    font-family: "StratosSkyeng";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 48px;
-    text-align: center;
-    font-feature-settings: "pnum" on, "lnum" on;
-    color: #004980;
-    margin-top: 52px;
+  width: 208px;
+  height: 96px;
+  margin-top: 52px;
+  font-family: "StratosSkyeng", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 48px;
+  text-align: center;
+  font-feature-settings: "pnum" on, "lnum" on;
+  color: #004980;
 }
-
 .difficult__field-buttons {
-    display: flex;
-    gap: 24px;
-    margin-top: 48px;
-    margin-bottom: 67px;
+  display: flex;
+  gap: 24px;
+  margin-top: 48px;
+  margin-bottom: 67px;
 }
-
 .difficult__button-level {
-    width: 96px;
-    height: 98px;
-    border-radius: 12px;
-    border: none;
-    font-family: "StratosSkyeng";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 64px;
-    line-height: 72px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #ffffff;
-    color: #0080c1;
+  width: 96px;
+  height: 98px;
+  border-radius: 12px;
+  border: none;
+  font-family: "StratosSkyeng", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 72px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #fff;
+  color: #0080c1;
 }
 .difficult__button-level:hover {
-    outline: 2px solid #0080c1;
+  outline: 2px solid #0080c1;
 }
 .difficult__button-level_select {
-    outline: 2px solid #0080c1;
+  outline: 2px solid #0080c1;
 }
 .difficult__button-level_alert {
-    outline: 2px solid #ff0000;
+  outline: 2px solid #f00;
 }
 .difficult__button-start {
-    width: 246px;
-    height: 50px;
-    outline: none;
-    border: none;
-    border-radius: 12px;
-    font-family: "StratosSkyeng";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 32px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-feature-settings: "pnum" on, "lnum" on;
-    background: #7ac100;
-    color: #ffffff;
+  width: 246px;
+  height: 50px;
+  outline: none;
+  border: none;
+  border-radius: 12px;
+  font-family: "StratosSkyeng", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-feature-settings: "pnum" on, "lnum" on;
+  background: #7ac100;
+  color: #fff;
 }
 .difficult__button-start:hover {
-    transform: scale(1.02);
-} /*# sourceMappingURL=style.css.map */
+  transform: scale(1.02);
+}/*# sourceMappingURL=style.css.map */
