--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -7,3 +7,6 @@ $color-button-level-hover: #0080c1;
 $color-button-level-alert: #f00;
 $color-green-button-bg: #7ac100;
 $color-green-button-text: #fff;
+$color-card-bg: #fff;
+$color-card-back-bg: #e4fbff;
+$color-timer-text: #fff;
