--- a/style.css
+++ b/style.css
@@ -12,12 +12,19 @@
 
 body {
   font-family: "StratosSkyeng", sans-serif;
+  background: #004980;
+}
+
+.screen {
   height: 100vh;
   width: 100vw;
+  padding-left: calc(50% - 488px);
+  padding-right: calc(50% - 488px);
+}
+.screen-difficult {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #004980;
 }
 
 .screen-difficult_hidden,
@@ -33,6 +40,28 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.button-start {
+  width: 246px;
+  height: 50px;
+  outline: none;
+  border: none;
+  border-radius: 12px;
+  font-family: "StratosSkyeng", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-feature-settings: "pnum" on, "lnum" on;
+  background: #7ac100;
+  color: #fff;
+}
+.button-start:hover {
+  transform: scale(1.02);
 }
 
 .difficult__title {
@@ -79,24 +108,71 @@ body {
 .difficult__button-level_alert {
   outline: 2px solid #f00;
 }
-.difficult__button-start {
-  width: 246px;
-  height: 50px;
-  outline: none;
-  border: none;
-  border-radius: 12px;
+
+.header {
+  height: 100px;
+  margin-top: 22px;
+  margin-bottom: 46px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.header__timer-field {
+  width: 150px;
+  height: 90px;
+}
+.header__timer-field-text {
+  display: flex;
+  justify-content: flex-end;
+  gap: 57px;
+}
+.header__timer-text {
   font-family: "StratosSkyeng", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 24px;
+  font-size: 16px;
   line-height: 32px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-feature-settings: "pnum" on, "lnum" on;
-  background: #7ac100;
   color: #fff;
 }
-.difficult__button-start:hover {
+.header__timer-scale {
+  font-family: "StratosSkyeng", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 72px;
+  color: #fff;
+}
+
+.field-cards {
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  gap: 15px;
+  row-gap: 15px;
+}
+
+.card {
+  grid-column: span 1;
+  width: 95px;
+  height: 133px;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+}
+.card__back {
+  width: 83px;
+  height: 121px;
+  margin: 6px;
+  border-radius: 4px;
+  background: #e4fbff;
+}
+.card:hover {
   transform: scale(1.02);
+}
+
+.field-cards-back_hidden,
+.field-cards-face_hidden {
+  display: none;
 }/*# sourceMappingURL=style.css.map */
