--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,12 +1,13 @@
 $color-body-bg: #004980;
-$color-block-message-bg: #c2f5ff;
-$color-block-message-title: #004980;
+$color-block-bg: #c2f5ff;
+$color-block-title: #004980;
+$color-block-text: #000;
 $color-button-level-bg: #fff;
 $color-button-level-text: #0080c1;
 $color-button-level-hover: #0080c1;
 $color-button-level-alert: #f00;
-$color-green-button-bg: #7ac100;
-$color-green-button-text: #fff;
+$color-button-start-bg: #7ac100;
+$color-button-start-text: #fff;
 $color-card-bg: #fff;
 $color-card-back-bg: #e4fbff;
 $color-timer-text: #fff;
