--- a/style.scss
+++ b/style.scss
@@ -15,12 +15,12 @@ body {
 
 .screen {
     height: 100vh;
-    width: 100vw;
 
     padding-left: calc(50% - 488px);
     padding-right: calc(50% - 488px);
 
-    &-difficult {
+    &-difficult,
+    &-end-game {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -28,21 +28,60 @@ body {
 }
 
 .screen-difficult_hidden,
-.screen-play_hidden {
+.screen-play_hidden,
+.screen-end-game_hidden,
+.end-game__image-win_hidden,
+.end-game__image-lose_hidden {
     display: none;
 }
 
-.block-message {
+.block {
     width: 480px;
     height: 459px;
 
-    background: $color-block-message-bg;
+    background: $color-block-bg;
 
     border-radius: 12px;
 
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    &__title {
+        font-family: 'StratosSkyeng', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 40px;
+        line-height: 48px;
+
+        text-align: center;
+        font-feature-settings: 'pnum' on, 'lnum' on;
+
+        color: $color-block-title;
+    }
+
+    &__text {
+        font-family: 'StratosSkyeng', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 32px;
+
+        text-align: center;
+        font-feature-settings: 'pnum' on, 'lnum' on;
+
+        color: $color-block-text;
+    }
+
+    &__time {
+        font-family: 'StratosSkyeng', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 64px;
+        line-height: 72px;
+
+        color: $color-block-text;
+    }
 }
 
 .button-start {
@@ -65,8 +104,8 @@ body {
 
     font-feature-settings: 'pnum' on, 'lnum' on;
 
-    background: $color-green-button-bg;
-    color: $color-green-button-text;
+    background: $color-button-start-bg;
+    color: $color-button-start-text;
 
     &:hover {
         transform: scale(1.02);
@@ -79,17 +118,6 @@ body {
         height: 96px;
 
         margin-top: 52px;
-
-        font-family: 'StratosSkyeng', sans-serif;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 40px;
-        line-height: 48px;
-
-        text-align: center;
-        font-feature-settings: 'pnum' on, 'lnum' on;
-
-        color: $color-block-message-title;
     }
 
     &__field-buttons {
@@ -177,23 +205,30 @@ body {
     }
 }
 
-.field-play {
-    // display: grid;
-    // grid-template-columns: repeat(9, 1fr);
-    margin: auto;
-    padding: auto;
+.screen-play {
+    &__field-play {
+        height: 75%;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-    gap: 15px;
+    &__block-cards {
+        width: 645px;
+        height: 100%;
+
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        flex-wrap: wrap;
+
+        gap: 15px;
+        row-gap: 15px;
+    }
 }
 
 .card {
-    // grid-column: span 1;
-
     width: 95px;
     height: 133px;
 
@@ -205,34 +240,36 @@ body {
 
     background: $color-card-bg;
 
-    &__card-face {
-        border-radius: 4px;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-    }
-
-    &__card-back {
-        // width: 83px;
-        // height: 121px;
-        border-radius: 4px;
-
-        // background: $color-card-back-bg;
-        background-image: url('src/images/card_back.png');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-    }
-
     &:hover {
         transform: scale(1.03);
     }
 }
 
-// .blockCards_hidden,
-.card__card-back_hidden,
-.card__card-face_hidden {
-    display: none;
+.end-game {
+    &__field-images {
+        height: 131px;
 
-    // background-image: url('src/images/card_back.png');
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__title {
+        height: 48px;
+
+        margin-bottom: 28px;
+    }
+
+    &__text {
+        height: 32px;
+
+        margin-bottom: 10px;
+    }
+
+    &__time {
+        width: 155px;
+        height: 72px;
+
+        margin-bottom: 40px;
+    }
 }
